--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </header>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-xs-4" style="overflow:scroll;" left-block>
+            <div class="col-xs-4" style="overflow-y:scroll;" left-block>
                 <form class="margin-top-20">
                     <div class="form-group">
                         <input type="text" sb-search-input ng-model="Data.search.query" class="form-control input-lg" placeholder="Start typing a city, district or a street">
